# ZXTapeFixer

./: CMakeLists.txt  DecodingLog.cpp  DecodingLog.h  ErrorsDumper.cpp  ErrorsDumper.h  README.md  TapeCoder.cpp  TapeCoder.h  main.cpp  tapefix.cpp  tapefix.h
utils/: RIFFFile.cpp  WAVE.txt  Wave.cpp  Wave.h  helper.cpp  helper.h  rifffile.h
